# transmod

./: .gitignore  README.md  pyproject.toml
src/transmod/: __init__.py  __version__.py
src/transmod/data/: utils.py
src/transmod/plots/: base.py
