[project]
name = "transmod"
version = "0.1.0"
description = "Multi-modal deep learning framework for translation initiation prediction"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Katarina Gresova", email = "katarina.gresova@mdc-berlin.de"}
]
keywords = [
    "translation",
    "deep-learning",
    "rna",
    "multi-modal",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

# Core dependencies - always installed
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Core bioinformatics functionality
bio = [
    "biopython>=1.81",
]

# Classical machine learning
ml = [
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
]

# Deep learning components
dl = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
]

# Plotting and visualization
plots = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Model interpretation
interp = [
    "shap>=0.42.0",
    "captum>=0.6.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",  # Replaces black, flake8, isort
    "mypy>=1.5.0",
    "pre-commit>=3.3.3",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# Jupyter notebook support
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]

# Common combinations for convenience
classical-ml = [
    "transmod[bio,ml,plots]",
]
deep-learning = [
    "transmod[bio,dl,plots]",
]
full-analysis = [
    "transmod[bio,ml,dl,plots,interp]",
]
complete = [
    "transmod[bio,ml,dl,plots,interp,notebook]",
]

[project.urls]
Homepage = "https://github.com/katarinagresova/transmod"
Documentation = "https://transmod.readthedocs.io"
Repository = "https://github.com/katarinagresova/transmod"

[tool.hatchling.build.targets.wheel]
packages = ["src/transmod"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=transmod --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false